# stot_lib

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  assrt.c  assrt.h  main.c  stot_test.h  test_hash.c  test_hash_table.c  test_mem_poo.c  test_str_builder.c
src/incl/stot/: bread.h  hash.h  hash_table.h  list.h  lp_string.h  mem_bread.h  mem_poo.h  str.h  str_builder.h  transient_stack.h
src/lib/: hash_internal.c  hash_internal.h  hash_set.c  hash_table.c  lp_string.c  mem_bread.c  mem_poo.c  str.c  str_builder.c  transient_stack.c
